Upgrade from aspectj 1.8.9 to 1.8.10