@@ -5,7 +5,7 @@ organization := "com.typesafe.sbt"
 name := "sbt-aspectj"
 version := "0.10-SNAPSHOT"
 
-libraryDependencies += "org.aspectj" % "aspectjtools" % "1.8.9"
+libraryDependencies += "org.aspectj" % "aspectjtools" % "1.8.10"
 
 publishMavenStyle := false
 
@@ -13,9 +13,3 @@ bintrayOrganization := Some("sbt")
 bintrayRepository := "sbt-plugin-releases"
 bintrayPackage := name.value
 bintrayReleaseOnPublish := false
-
-crossBuildingSettings
-CrossBuilding.crossSbtVersions := Seq("0.12", "0.13")
-CrossBuilding.scriptedSettings
-
-scriptedLaunchOpts := Seq("-Xms512m", "-Xmx512m", "-XX:MaxPermSize=256m", s"-Dproject.version=${version.value}")
